0.15.0.dev/_sources/reference/dipy.viz.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`viz`
==========
.. automodule:: dipy.viz

.. currentmodule:: dipy.viz
.. autosummary::

   fetch_viz_icons
   optional_package
   read_viz_icons

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.projections`
------------------------------
.. automodule:: dipy.viz.projections

.. currentmodule:: dipy.viz.projections
.. autosummary::

   doctest_skip_parser
   optional_package
   setup_module
   sph_project

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`viz.regtools`
---------------------------
.. automodule:: dipy.viz.regtools

.. currentmodule:: dipy.viz.regtools
.. autosummary::

   draw_lattice_2d
   optional_package
   overlay_images
   overlay_slices
   plot_2d_diffeomorphic_map
   plot_slices
   setup_module


.. currentmodule:: dipy.viz

fetch_viz_icons
~~~~~~~~~~~~~~~

.. autofunction:: fetch_viz_icons

optional_package
~~~~~~~~~~~~~~~~

.. autofunction:: optional_package

read_viz_icons
~~~~~~~~~~~~~~

.. autofunction:: read_viz_icons


.. currentmodule:: dipy.viz.projections

doctest_skip_parser
~~~~~~~~~~~~~~~~~~~

.. autofunction:: doctest_skip_parser

optional_package
~~~~~~~~~~~~~~~~

.. autofunction:: optional_package

setup_module
~~~~~~~~~~~~

.. autofunction:: setup_module

sph_project
~~~~~~~~~~~

.. autofunction:: sph_project


.. currentmodule:: dipy.viz.regtools

draw_lattice_2d
~~~~~~~~~~~~~~~

.. autofunction:: draw_lattice_2d

optional_package
~~~~~~~~~~~~~~~~

.. autofunction:: optional_package

overlay_images
~~~~~~~~~~~~~~

.. autofunction:: overlay_images

overlay_slices
~~~~~~~~~~~~~~

.. autofunction:: overlay_slices

plot_2d_diffeomorphic_map
~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: plot_2d_diffeomorphic_map

plot_slices
~~~~~~~~~~~

.. autofunction:: plot_slices

setup_module
~~~~~~~~~~~~

.. autofunction:: setup_module

